doc/0.9/_sources/examples/REST_data_ingestion.rst.txt


.. _sphx_glr_examples_REST_data_ingestion.py:


Data Ingestion Example [REST API]
---------------------------------

An example illustrating the data ingestion in FreeDiscovery





.. rst-class:: sphx-glr-script-out

 Out::

    0. Load the test dataset
     GET http://localhost:5001/api/v0/example-dataset/treclegal09_2k_subset

    1.a Load dataset and initalize feature extraction
     POST http://localhost:5001/api/v0/feature-extraction
       => received ['filenames', 'id']
       => dsid = f2cf2324550f4f9b

    1.b Start feature extraction
     POST http://localhost:5001/api/v0/feature-extraction/f2cf2324550f4f9b

    2.a Load dataset and initalize feature extraction
     POST http://localhost:5001/api/v0/feature-extraction
       => received ['filenames', 'id']
       => dsid = d0f56d846ca24d28

    2.b Start feature extraction
     POST http://localhost:5001/api/v0/feature-extraction/d0f56d846ca24d28

    2.d. check the parameters of the extracted features
     GET http://localhost:5001/api/v0/feature-extraction/d0f56d846ca24d28
         - analyzer: word
         - binary: False
         - chunk_size: 5000
         - data_dir: ../freediscovery_shared/treclegal09_2k_subset/data/jobRun_4/XML_EXPORT_CONTENT/text_9
         - max_df: 1.0
         - min_df: 0.0
         - n_features: 100001
         - n_jobs: 1
         - n_samples: 2465
         - n_samples_processed: 2465
         - ngram_range: [1, 1]
         - norm: None
         - stop_words: None
         - sublinear_tf: True
         - use_hashing: True
         - use_idf: False

    3. Examine the id mapping


     GET http://localhost:5001/api/v0/feature-extraction/d0f56d846ca24d28/id-mapping
       DATA {"data": [{"internal_id": 0}, {"internal_id": 1}, {"internal_id": 2}]}
     Response:
       {
        "data": [
            {
                "document_id": 0,
                "file_path": "0.7.47.1097257.txt",
                "internal_id": 0
            },
            {
                "document_id": 1,
                "file_path": "0.7.47.1097258.txt",
                "internal_id": 1
            },
            {
                "document_id": 4,
                "file_path": "0.7.47.1097259.txt",
                "internal_id": 2
            }
        ]
    }

    5.a Delete the extracted features
     DELETE http://localhost:5001/api/v0/feature-extraction/d0f56d846ca24d28




|


.. code-block:: python


    from __future__ import print_function

    import requests
    import pandas as pd
    import json
    import os.path

    pd.options.display.float_format = '{:,.3f}'.format
    pd.options.display.expand_frame_repr = False

    dataset_name = "treclegal09_2k_subset"     # see list of available datasets

    BASE_URL = "http://localhost:5001/api/v0"  # FreeDiscovery server URL

    if __name__ == '__main__':

        print(" 0. Load the test dataset")
        url = BASE_URL + '/example-dataset/{}'.format(dataset_name)
        print(" GET", url)
        input_ds = requests.get(url).json()

        # To use a custom dataset, simply specify the following variables
        # create a custom dataset definition for ingestion
        data_dir = input_ds['metadata']['data_dir']
        dataset_definition = [{'document_id': row['document_id'],
                               'file_path': os.path.join(data_dir, row['file_path'])} \
                                       for row in input_ds['dataset']]


        # 1. Ingest a dataset specified by folder path

        print("\n1.a Load dataset and initalize feature extraction")
        url = BASE_URL + '/feature-extraction'
        print(" POST", url)
        res = requests.post(url, json={'dataset_definition': dataset_definition,
                                       'use_hashing': True}).json()

        dsid = res['id']
        print("   => received {}".format(list(res.keys())))
        print("   => dsid = {}".format(dsid))

        print("\n1.b Start feature extraction")

        url = BASE_URL+'/feature-extraction/{}'.format(dsid)
        print(" POST", url)
        res = requests.post(url,)

        # 2. Ingest a dataset specified by a path to each file in the dataset


        print("\n2.a Load dataset and initalize feature extraction")
        url = BASE_URL + '/feature-extraction'
        print(" POST", url)
        res = requests.post(url, json={'dataset_definition': dataset_definition,
                                       'use_hashing': True}).json()

        dsid = res['id']
        print("   => received {}".format(list(res.keys())))
        print("   => dsid = {}".format(dsid))

        print("\n2.b Start feature extraction")

        url = BASE_URL+'/feature-extraction/{}'.format(dsid)
        print(" POST", url)
        res = requests.post(url,)


        print("\n2.d. check the parameters of the extracted features")
        url = BASE_URL + '/feature-extraction/{}'.format(dsid)
        print(' GET', url)
        res = requests.get(url).json()

        print('\n'.join(['     - {}: {}'.format(key, val) for key, val in res.items() \
                                                          if "filenames" not in key]))

        print("\n3. Examine the id mapping\n")

        method = BASE_URL + "/feature-extraction/{}/id-mapping".format(dsid)
        print('\n GET', method)
        data = {'data': [{'internal_id': row['internal_id']} for row in input_ds['dataset'][:3]]}
        print('   DATA', json.dumps(data))
        res = requests.post(method, json=data).json()

        print(' Response:')
        print('  ', json.dumps(res, indent=4))

        # 4. Cleaning
        print("\n5.a Delete the extracted features")
        url = BASE_URL + '/feature-extraction/{}'.format(dsid)
        print(" DELETE", url)
        requests.delete(url)

**Total running time of the script:** ( 0 minutes  5.754 seconds)



.. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: REST_data_ingestion.py <REST_data_ingestion.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: REST_data_ingestion.ipynb <REST_data_ingestion.ipynb>`

.. rst-class:: sphx-glr-signature

    `Generated by Sphinx-Gallery <http://sphinx-gallery.readthedocs.io>`_
